--- a/006-Object-Oriented-Programming/Object-Oriented Programming - Workshop.ipynb
+++ b/006-Object-Oriented-Programming/Object-Oriented Programming - Workshop.ipynb
@@ -6,7 +6,6 @@
       "name": "Object-Oriented Programming - Workshop",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPvHodEFiWoCRgm7IhaZNdq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +31,21 @@
         "colab_type": "text"
       },
       "source": [
-        "## 1."
+        "## 1.\n",
+        "\n",
+        "For each question, check the correct answer.\n",
+        "\n",
+        "> To check a checkbox, double-click on the text cell to edit it, and add an `x` inside the brackets, like `[x]`."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DO6hOlkfvdp7",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -48,7 +61,7 @@
         "\n",
         "![](https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Vintage_Casio_Memory-8A_Electronic_Pocket_Calculator_%28aka_Model_CD-813%29%2C_Green_Fluorescent_Display%2C_Made_In_Japan%2C_Circa_1974_%2814189459971%29.jpg/190px-Vintage_Casio_Memory-8A_Electronic_Pocket_Calculator_%28aka_Model_CD-813%29%2C_Green_Fluorescent_Display%2C_Made_In_Japan%2C_Circa_1974_%2814189459971%29.jpg)\n",
         "\n",
-        "The calculator ahouls have only one data attribute, the value currently shown on screen:\n",
+        "The calculator should have only one data attribute, the value currently shown on screen:\n",
         "\n",
         "* `value`: an `int`\n",
         "\n",
