--- a/006-Object-Oriented-Programming/Object-Oriented Programming - Workshop.ipynb
+++ b/006-Object-Oriented-Programming/Object-Oriented Programming - Workshop.ipynb
@@ -33,6 +33,16 @@
       "source": [
         "## 1.\n",
         "\n",
+        "Consider the following block of code:\n",
+        "\n",
+        "```python\n",
+        "class A:\n",
+        "  def __init__(self):\n",
+        "    self.answer = 42\n",
+        "\n",
+        "a = A()\n",
+        "```\n",
+        "\n",
         "For each question, check the correct answer.\n",
         "\n",
         "> To check a checkbox, double-click on the text cell to edit it, and add an `x` inside the brackets, like `[x]`."
@@ -45,7 +55,72 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "##### 1.1\n",
+        "\n",
+        "* [ ] `a` is a `self`\n",
+        "* [ ] `a` is an object\n",
+        "* [ ] `a` is a class\n",
+        "* [ ] `a` is a type"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-mwRUmqA4yYZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "##### 1.2\n",
+        "\n",
+        "* [ ] the type of `a` is `A`\n",
+        "* [ ] the type of `a` is `class`\n",
+        "* [ ] the type of `a` is `object`\n",
+        "* [ ] the type of `a` is `type`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s8hvYVuc5Zru",
+        "colab_type": "text"
+      },
+      "source": [
+        "##### 1.3\n",
+        "\n",
+        "* [ ] `A` is an instance of `a`\n",
+        "* [ ] `a` is an instance of `A`\n",
+        "* [ ] `a` is a subclass of `A`\n",
+        "* [ ] `a` inherits from `A`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WlLzI08C5pGG",
+        "colab_type": "text"
+      },
+      "source": [
+        "##### 1.4\n",
+        "\n",
+        "* [ ] `A.answer == 42`\n",
+        "* [ ] `a.answer == 42`\n",
+        "* [ ] `a['answer'] == 42`\n",
+        "* [ ] `a.answer != 42`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J1Wd0MHH6CRN",
+        "colab_type": "text"
+      },
+      "source": [
+        "##### 1.5\n",
+        "\n",
+        "* [ ] `answer` is a class attribute\n",
+        "* [ ] `answer` is a static attribute\n",
+        "* [ ] `answer` is a type attribute\n",
+        "* [ ] `answer` is an instance attribute"
       ]
     },
     {
