--- a/006-Object-Oriented-Programming/Object-Oriented Programming - Chap 03 - Exercises.ipynb
+++ b/006-Object-Oriented-Programming/Object-Oriented Programming - Chap 03 - Exercises.ipynb
@@ -50,7 +50,7 @@
         "  def __init__(self, greeting):\n",
         "    self.greeting = greeting\n",
         "  def greet(self, target):\n",
-        "    print(f'{self.greeting} {self.target}!')"
+        "    print(f'{self.greeting} {target}!')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -121,7 +121,7 @@
         "  def __init__(self, greeting):\n",
         "    self.greeting = greeting\n",
         "  def greet(self, target):\n",
-        "    print(f'{self.greeting} {self.target}!')"
+        "    print(f'{self.greeting} {target}!')"
       ],
       "execution_count": 0,
       "outputs": []
