--- a/004-Functions-And-More/Functions And More - Workshop.ipynb
+++ b/004-Functions-And-More/Functions And More - Workshop.ipynb
@@ -51,7 +51,7 @@
         "#### 1. What would be the output of this program?\n",
         "\n",
         "```python\n",
-        "def buy_eggs(num_eggs)\n",
+        "def buy_eggs(num_eggs):\n",
         "    egg_count = 0\n",
         "    egg_count += num_eggs\n",
         "    return egg_count\n",
@@ -78,7 +78,7 @@
         "```python\n",
         "egg_count = 0\n",
         "\n",
-        "def buy_eggs(num_eggs)\n",
+        "def buy_eggs(num_eggs):\n",
         "    egg_count += num_eggs\n",
         "    return egg_count\n",
         "\n",
@@ -104,7 +104,7 @@
         "```python\n",
         "egg_count = 0\n",
         "\n",
-        "def buy_eggs(num_eggs)\n",
+        "def buy_eggs(num_eggs):\n",
         "    egg_count = num_eggs\n",
         "    return egg_count\n",
         "\n",
@@ -128,7 +128,7 @@
         "#### 4. What would be the output of this program?\n",
         "\n",
         "```python\n",
-        "def buy_eggs(num_eggs)\n",
+        "def buy_eggs(num_eggs):\n",
         "    egg_count = 0\n",
         "    egg_count += num_eggs\n",
         "    return egg_count\n",
@@ -155,7 +155,7 @@
         "```python\n",
         "egg_count = 0\n",
         "\n",
-        "def buy_eggs(num_eggs)\n",
+        "def buy_eggs(num_eggs):\n",
         "    global egg_count\n",
         "    egg_count += num_eggs\n",
         "    return egg_count\n",
@@ -180,7 +180,7 @@
         "####6. What would be the output of this program?\n",
         "\n",
         "```python\n",
-        "def buy_eggs(num_eggs)\n",
+        "def buy_eggs(num_eggs):\n",
         "    egg_count = 0\n",
         "    egg_count += num_eggs\n",
         "    return egg_count\n",
