--- a/008-Essential-Python-Libraries/Essential Python Libraries - Chap 01 - Requests - Demo.ipynb
+++ b/008-Essential-Python-Libraries/Essential Python Libraries - Chap 01 - Requests - Demo.ipynb
@@ -8,7 +8,7 @@
       "private_outputs": true,
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOPghL64ejh5oo9/oQdUUvB",
+      "authorship_tag": "ABX9TyP+cJn3lEbsGxFfwtSlKV0S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -139,6 +139,19 @@
       },
       "source": [
         "res.raise_for_status()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r_1bHWHPt71Q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "res = requests.get('https://googlec.om')"
       ],
       "execution_count": 0,
       "outputs": []
