--- a/008-Essential-Python-Libraries/Essential Python Libraries - Chap 01 - Requests - Demo.ipynb
+++ b/008-Essential-Python-Libraries/Essential Python Libraries - Chap 01 - Requests - Demo.ipynb
@@ -8,7 +8,7 @@
       "private_outputs": true,
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP+cJn3lEbsGxFfwtSlKV0S",
+      "authorship_tag": "ABX9TyOzjHzYsV06sa6/MUkHARXl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,6 +110,32 @@
       },
       "source": [
         "print(res.text)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L7Ck0vDwItff",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(res.elapsed)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RB6akkDLIqwN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(res.history)"
       ],
       "execution_count": 0,
       "outputs": []
