--- a/008-Essential-Python-Libraries/Essential Python Libraries - Chap 04 - Numpy - Demo.ipynb
+++ b/008-Essential-Python-Libraries/Essential Python Libraries - Chap 04 - Numpy - Demo.ipynb
@@ -6,7 +6,7 @@
       "name": "Essential Python Libraries - Chap 04 - Numpy - Demo",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNVatE81SgN9LzuqePu3FMd",
+      "authorship_tag": "ABX9TyNU3ZDwkpRTv2zxfvDVN8Vv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -440,6 +440,19 @@
       },
       "source": [
         "print(np.argmin(a, axis=1))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kf6ODgzo3hNg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "np.sqrt(a)"
       ],
       "execution_count": 0,
       "outputs": []
