--- a/008-Essential-Python-Libraries/Essential Python Libraries - Chap 05 - Matplotlib - Demo.ipynb
+++ b/008-Essential-Python-Libraries/Essential Python Libraries - Chap 05 - Matplotlib - Demo.ipynb
@@ -6,7 +6,7 @@
       "name": "Essential Python Libraries - Chap 05 - Matplotlib - Demo",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOpxn0iC7RzgnvyPnW2kDCu",
+      "authorship_tag": "ABX9TyNcuq1pUaYfAcKTY7CvuuhF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,8 +83,9 @@
         "colab": {}
       },
       "source": [
-        "plt.plot(x, y)\n",
-        "plt.plot(x, 2 * y + 1)\n",
+        "plt.plot(x, x * x)\n",
+        "plt.plot(x, -2 * x * x + 1)\n",
+        "plt.legend(['$x^2$', '$2-x^2+1$'])\n",
         "plt.show()"
       ],
       "execution_count": 0,
@@ -115,7 +116,7 @@
         "colab": {}
       },
       "source": [
-        "plt.figure(num=2, figsize=(16, 8))\n",
+        "plt.figure(figsize=(16, 6))\n",
         "plt.subplot(1, 2, 1)\n",
         "plt.plot(x, y)\n",
         "plt.subplot(1, 2, 2)\n",
@@ -133,13 +134,29 @@
         "colab": {}
       },
       "source": [
-        "x = np.linspace(-10, 10, 513)\n",
-        "y = np.linspace(-10, 10, 513)\n",
+        "x = np.linspace(-3, 3, 513)\n",
+        "y = np.linspace(-3, 3, 513)\n",
         "xv, yv = np.meshgrid(x, y)\n",
-        "z = np.sin(np.hypot(xv, yv)) / np.hypot(xv, yv)\n",
+        "z = np.sinc(np.hypot(xv, yv))\n",
         "z[256, 256] = 1.0\n",
         "\n",
-        "plt.imshow(z, cmap='hot', extent=[-10, 10, -10, 10])\n",
+        "plt.imshow(z, cmap='gray', extent=[-3, 3, -3, 3])\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D170B8VspW0F",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.figure(figsize=(8, 6))\n",
+        "ax = plt.axes(projection=\"3d\")\n",
+        "ax.plot_surface(xv, yv, z, cmap='terrain')\n",
         "plt.show()"
       ],
       "execution_count": 0,
